<resources>
    <string name="app_name">MyWeatherApp</string>
    <string name="city">Moscow</string>
    <string name="temperature" translatable="false">+24°C</string>
    <string name="humidity">Humidity</string>
    <string name="feelsLikeTemp">Feels like</string>
    <string name="visibility">Visibility</string>
    <string name="pressure">Pressure</string>
    <string name="wind_speed">Wind speed</string>
    <string name="wind_direction">Wind direction</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="options">Options</string>
    <string name="weatherIcon">WeatherIcon</string>
    <string name="settings">Settings</string>
    <string name="valueOfHumidity" translatable="false">58%</string>
    <string name="valueOfFeelsLikeTemp" translatable="false">+17°C</string>
    <string name="valueOfVisibility" translatable="false">1000m</string>
    <string name="valueOfPressure">763 mm</string>
    <string name="valueOfWindSpeed">3 m/s</string>
    <string name="valueOfWindDirection">SW</string>
    <string name="valueOfSunrise" translatable="false">4:31</string>
    <string name="valueOfSunset" translatable="false">20:44</string>
    <string name="inputCityHint">add a new city</string>
    <string name="temperature_unit">Temperature unit:</string>
    <string name="degreesC" translatable="false">°C</string>
    <string name="degreesF" translatable="false">°F</string>
    <string name="degrees" translatable="false">°</string>
    <string name="percent" translatable="false">%</string>
    <string name="am" translatable="false">am</string>
    <string name="pm" translatable="false">pm</string>
    <string name="wind_speed_units">Wind speed unit:</string>
    <string name="ms">m/s</string>
    <string name="kmh">km/h</string>
    <string name="pressure_unit">Pressure unit:</string>
    <string name="mm">mm</string>
    <string name="m">m</string>
    <string name="gpa">gPa</string>
    <string name="night_day_theme">Night/day theme:</string>
    <string name="night_theme">Night theme</string>
    <string name="day_theme">Day theme</string>
    <string name="wrong_name_message" translatable="false">Wrong city name!</string>
</resources>