<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/settingsImage"
        android:layout_width="@dimen/width_settingsImage"
        android:layout_height="@dimen/height_settingsImage"
        android:contentDescription="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.985"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:srcCompat="@drawable/settings" />

    <ImageView
        android:id="@+id/homeImage"
        android:layout_width="@dimen/width_optionsImage"
        android:layout_height="@dimen/height_optionsImage"
        android:contentDescription="@string/options"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.985"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/home" />

    <LinearLayout
        android:layout_width="@dimen/width_settingsTableCheckBox"
        android:layout_height="@dimen/height_settingsTableCheckBox"
        android:layout_marginTop="@dimen/marginTop_settingsTableCheckBox"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bad_script"
            android:text="@string/temperature_unit"
            android:textSize="@dimen/textSize_settingsName" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_settingsGroup">

            <RadioButton
                android:id="@+id/tempValueC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bad_script"
                android:text="@string/degreesC"
                android:textSize="@dimen/textSize_settingsValue" />

            <RadioButton
                android:id="@+id/tempValueF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bad_script"
                android:text="@string/degreesF"
                android:textSize="@dimen/textSize_settingsValue" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bad_script"
            android:text="@string/wind_speed_units"
            android:textSize="@dimen/textSize_settingsName" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_settingsGroup">

            <RadioButton
                android:id="@+id/windSpeedValMS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bad_script"
                android:text="@string/ms"
                android:textSize="@dimen/textSize_settingsValue" />

            <RadioButton
                android:id="@+id/windSpeedValKmH"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bad_script"
                android:text="@string/kmh"
                android:textSize="@dimen/textSize_settingsValue" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bad_script"
            android:text="@string/pressure_unit"
            android:textSize="@dimen/textSize_settingsName" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_settingsGroup">

            <RadioButton
                android:id="@+id/PressureValMm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bad_script"
                android:text="@string/mm"
                android:textSize="@dimen/textSize_settingsValue" />

            <RadioButton
                android:id="@+id/PressureValGPa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bad_script"
                android:text="@string/gpa"
                android:textSize="@dimen/textSize_settingsValue" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bad_script"
            android:text="@string/night_day_theme"
            android:textSize="@dimen/textSize_settingsName" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_settingsGroup">

            <RadioButton
                android:id="@+id/nightTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bad_script"
                android:text="@string/night_theme"
                android:textSize="@dimen/textSize_settingsValue" />

            <RadioButton
                android:id="@+id/dayTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bad_script"
                android:text="@string/day_theme"
                android:textSize="@dimen/textSize_settingsValue" />
        </RadioGroup>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>