<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WeatherActivity">

    <TextView
        android:id="@+id/cityName"
        android:layout_width="wrap_content"
        android:maxWidth="@dimen/maxWidthEnterCity"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bad_script"
        android:text="@string/city"
        android:textSize="@dimen/textSize_city"
        android:lines="1"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temperatureReading"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_temperature"
        android:fontFamily="@font/bad_script"
        android:text="@string/temperature"
        android:textSize="@dimen/textSize_temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityName" />

    <ImageView
        android:id="@+id/weatherImage"
        android:layout_width="@dimen/width_weatherImage"
        android:layout_height="@dimen/height_weatherImage"
        android:scaleType="fitXY"
        android:contentDescription="@string/weatherIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityName" />

    <ImageView
        android:id="@+id/settingsImage"
        android:layout_width="@dimen/width_optionsImage"
        android:layout_height="@dimen/height_optionsImage"
        android:contentDescription="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.985"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        android:src="?attr/settingsImage" />

    <ImageView
        android:id="@+id/optionImage"
        android:layout_width="@dimen/width_optionsImage"
        android:layout_height="@dimen/height_optionsImage"
        android:contentDescription="@string/options"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.985"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85"
        android:src="?attr/optionsImage" />

    <ImageView
        android:id="@+id/detailsImage"
        android:layout_width="@dimen/width_optionsImage"
        android:layout_height="@dimen/height_optionsImage"
        android:contentDescription="@string/options"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.985"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65"
        android:src="?attr/yandexImage" />

    <ImageView
        android:id="@+id/infoImage"
        android:layout_width="@dimen/width_optionsImage"
        android:layout_height="@dimen/height_optionsImage"
        android:contentDescription="@string/options"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.985"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"
        android:src="?attr/wikiImage" />

    <ImageView
        android:id="@+id/listImage"
        android:layout_width="@dimen/width_optionsImage"
        android:layout_height="@dimen/height_optionsImage"
        android:contentDescription="@string/options"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.985"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:src="?attr/listImage" />

    <TableLayout
        android:layout_width="@dimen/width_optionsTable"
        android:layout_height="@dimen/height_optionsTable"
        android:layout_marginTop="@dimen/marginTop_optionsTable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.288"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatureReading">

        <TableRow
            android:id="@+id/rowUVIndex"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="@font/bad_script"
                android:text="@string/feelsLikeTemp"
                android:textSize="@dimen/textSize_optionsTable"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/valueOfUVIndex"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/bad_script"
                android:text="@string/valueOfFeelsLikeTemp"
                android:textSize="@dimen/textSize_optionsTable"
                android:textStyle="bold" />
        </TableRow>

        <TableRow android:id="@+id/rowHumidity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="@font/bad_script"
                android:text="@string/humidity"
                android:textSize="@dimen/textSize_optionsTable"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/valueOfHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bad_script"
                android:text="@string/valueOfHumidity"
                android:textSize="@dimen/textSize_optionsTable"
                android:textStyle="bold" />
        </TableRow>

        <TableRow android:id="@+id/rowChanceOfRain">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="@font/bad_script"
                android:text="@string/visibility"
                android:textSize="@dimen/textSize_optionsTable"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/valueOfChanceOfRain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bad_script"
                android:text="@string/valueOfVisibility"
                android:textSize="@dimen/textSize_optionsTable"
                android:textStyle="bold" />
        </TableRow>

        <TableRow android:id="@+id/rowPressure">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="@font/bad_script"
                android:text="@string/pressure"
                android:textSize="@dimen/textSize_optionsTable"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/valueOfPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bad_script"
                android:text="@string/valueOfPressure"
                android:textSize="@dimen/textSize_optionsTable"
                android:textStyle="bold" />
        </TableRow>

        <TableRow android:id="@+id/rowWindSpeed">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="@font/bad_script"
                android:text="@string/wind_speed"
                android:textSize="@dimen/textSize_optionsTable"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/valueOfWindSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bad_script"
                android:text="@string/valueOfWindSpeed"
                android:textSize="@dimen/textSize_optionsTable"
                android:textStyle="bold" />
        </TableRow>

        <TableRow android:id="@+id/rowWindDirection">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="@font/bad_script"
                android:text="@string/wind_direction"
                android:textSize="@dimen/textSize_optionsTable"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/valueOfWindDirection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bad_script"
                android:text="@string/valueOfWindDirection"
                android:textSize="@dimen/textSize_optionsTable"
                android:textStyle="bold" />
        </TableRow>

        <TableRow android:id="@+id/rowSunrise">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="@font/bad_script"
                android:text="@string/sunrise"
                android:textSize="@dimen/textSize_optionsTable"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/valueOfSunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bad_script"
                android:text="@string/valueOfSunrise"
                android:textSize="@dimen/textSize_optionsTable"
                android:textStyle="bold" />
        </TableRow>

        <TableRow android:id="@+id/rowSunset">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="@font/bad_script"
                android:text="@string/sunset"
                android:textSize="@dimen/textSize_optionsTable"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/valueOfSunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bad_script"
                android:text="@string/valueOfSunset"
                android:textSize="@dimen/textSize_optionsTable"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>