<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="@dimen/width_optionsTableCheckBox"
        android:layout_height="@dimen/height_optionsTableCheckBox"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/checkBoxHumidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/bad_script"
            android:text="@string/humidity"
            android:textSize="@dimen/textSize_optionsCheckBox" />

        <CheckBox
            android:id="@+id/checkBoxUVIndex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/bad_script"
            android:text="@string/uv_index"
            android:textSize="@dimen/textSize_optionsCheckBox" />

        <CheckBox
            android:id="@+id/checkBoxChanceOfRain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/bad_script"
            android:text="@string/chance_of_rain"
            android:textSize="@dimen/textSize_optionsCheckBox" />

        <CheckBox
            android:id="@+id/checkBoxPressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/bad_script"
            android:text="@string/pressure"
            android:textSize="@dimen/textSize_optionsCheckBox" />

        <CheckBox
            android:id="@+id/checkBoxWindSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/bad_script"
            android:text="@string/wind_speed"
            android:textSize="@dimen/textSize_optionsCheckBox" />

        <CheckBox
            android:id="@+id/checkBoxWindDirection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/bad_script"
            android:text="@string/wind_direction"
            android:textSize="@dimen/textSize_optionsCheckBox" />

        <CheckBox
            android:id="@+id/checkBoxSunrise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/bad_script"
            android:text="@string/sunrise"
            android:textSize="@dimen/textSize_optionsCheckBox" />

        <CheckBox
            android:id="@+id/checkBoxSunset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/bad_script"
            android:text="@string/sunset"
            android:textSize="@dimen/textSize_optionsCheckBox" />
    </LinearLayout>

    <ImageView
        android:id="@+id/homeImage"
        android:layout_width="@dimen/width_optionsImage"
        android:layout_height="@dimen/height_optionsImage"
        android:contentDescription="@string/options"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.985"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/home" />
</androidx.constraintlayout.widget.ConstraintLayout>